--- a/src/app/pages/dashboard/cabedashboard/cabedashboard.component.html
+++ b/src/app/pages/dashboard/cabedashboard/cabedashboard.component.html
@@ -9,7 +9,7 @@
    
    </div>
    <div class="titulo-logout">
-      <a routerLink="/login">LOGOUT</a>
+      <a href="/login"><img src="https://toppng.com/uploads/thumbnail/logout-11551049168akrqoogahk.png" alt=""></a>
      </div>
      
 </header>
