--- a/src/app/pages/ingressos/cabecalhoing/cabecalhoing.component.html
+++ b/src/app/pages/ingressos/cabecalhoing/cabecalhoing.component.html
@@ -1,12 +1,16 @@
 <header class="banner">
-    
-    <div class="texto-header">
-        <h1>FORMULA 1 MSC CRUISES</h1>
-        <a routerLink="/home">
-            
-            <p>GRANDE PRÊMIO <br>DE SÃO PAULO </p>
-            <span>2025</span>
-        
-        <br></a>
+   <div class="ban">
+      <img src="HEADERF1LOGO.png" alt="Logo cabecalho">
+      <div class="texto-header">
+         <h1>FORMULA 1 MSC CRUISES</h1>
+         <p>GRANDE PRÊMIO DE SÃO PAULO 2025</p>
+         <span>SÃO PAULO 07 - 09 NOVEMBRO</span>
+         <br>
+      </div>
+   
+   </div>
+   <div class="titulo-logout">
+      <a href="/login"><img src="https://toppng.com/uploads/thumbnail/logout-11551049168akrqoogahk.png" alt=""></a>
      </div>
- </header>
+     
+</header>
