--- a/src/app/pages/ingressos/setores/setores.component.html
+++ b/src/app/pages/ingressos/setores/setores.component.html
@@ -1,3 +1,5 @@
+
+<h1 class="t1">Interlagos - 07, 08 e 09 de Novembro</h1>
 <div class="mapasetores">
     <img src="mapasetores.png" alt="">
 </div>
@@ -19,7 +21,7 @@
             <div class="setor-detalhes">
                 <p>{{ setorA.descricao }}</p> 
                 <a [href]="setorA.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                    Ingressos a partir de R$ 710,00
                 </a>
             </div>
         </div>
@@ -36,7 +38,7 @@
             <div class="setor-detalhes">
                 <p>{{ setorB.descricao }}</p> 
                 <a [href]="setorB.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                    Ingressos a partir de R$ 4.900,00
                 </a>
             </div>
         </div>
@@ -53,7 +55,7 @@
             <div class="setor-detalhes">
                 <p>{{ setorD.descricao }}</p> 
                 <a [href]="setorD.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                    Ingressos a partir de R$ 4.230,00
                 </a>
             </div>
         </div>
@@ -70,7 +72,7 @@
             <div class="setor-detalhes">
                 <p>{{ setorG.descricao }}</p> 
                 <a [href]="setorG.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                    Ingressos a partir de R$ 465,00
                 </a>
             </div>
         </div>
@@ -86,8 +88,8 @@
             </span>
             <div class="setor-detalhes">
                 <p>{{ setorH.descricao }}</p> 
-                <a [href]="setorG.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                <a [href]="setorH.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
+                    Ingressos a partir de R$ 1.250,00
                 </a>
             </div>
         </div>
@@ -103,15 +105,15 @@
             </span>
             <div class="setor-detalhes">
                 <p>{{ setorM.descricao }}</p> 
-                <a [href]="setorG.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                <a [href]="setorM.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
+                    Ingressos a partir de R$ 1.575,00
                 </a>
             </div>
         </div>
 
         <div 
             class="setor-item cor-r" 
-            [class.active]="setorM.estaAtivo"
+            [class.active]="setorR.estaAtivo"
             (click)="alternarExibicao(setorR)"
         >
             <span class="setor-titulo">
@@ -120,8 +122,8 @@
             </span>
             <div class="setor-detalhes">
                 <p>{{ setorR.descricao }}</p> 
-                <a [href]="setorG.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                    Comprar Ingressos
+                <a [href]="setorR.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
+                    Ingressos a partir de R$ 920,00
                 </a>
             </div>
         </div>
@@ -138,7 +140,7 @@
         <div class="setor-detalhes">
             <p>{{ setorT.descricao }}</p> 
             <a [href]="setorT.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 1.400,00
             </a>
         </div>
     </div>
@@ -159,7 +161,7 @@
         <div class="setor-detalhes">
             <p>{{ setorporto.descricao }}</p> 
             <a [href]="setorporto.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 956,25
             </a>
         </div>
     </div>
@@ -176,7 +178,7 @@
         <div class="setor-detalhes">
             <p>{{ setorGRANDPRIXCLUB.descricao }}</p> 
             <a [href]="setorGRANDPRIXCLUB.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 19.300,00
             </a>
         </div>
     </div>
@@ -193,7 +195,7 @@
         <div class="setor-detalhes">
             <p>{{ setorGRAMADO.descricao }}</p> 
             <a [href]="setorGRAMADO.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 1.150,00
             </a>
         </div>
     </div>
@@ -210,7 +212,7 @@
     <div class="setor-detalhes">
         <p>{{ setorESTRELA.descricao }}</p> 
         <a [href]="setorESTRELA.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-            Comprar Ingressos
+            Ingressos a partir de R$ 4.600,00
         </a>
     </div>
 </div>
@@ -227,7 +229,7 @@
         <div class="setor-detalhes">
             <p>{{ setorTREECLUB.descricao }}</p> 
             <a [href]="setorTREECLUB.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 7.500,00
             </a>
         </div>
     </div>
@@ -244,7 +246,7 @@
         <div class="setor-detalhes">
             <p>{{ setorPITSTOPCLUB.descricao }}</p> 
             <a [href]="setorPITSTOPCLUB.link" target="_blank" class="buy-button" (click)="$event.stopPropagation()">
-                Comprar Ingressos
+                Ingressos a partir de R$ 9.750,00
             </a>
         </div>
     </div>
