--- a/src/app/pages/home/carrossel/carrossel.component.css
+++ b/src/app/pages/home/carrossel/carrossel.component.css
@@ -1,20 +1,18 @@
-/* src/app/componentes/carrossel/carrossel.component.css */
-
 .carrossel-container {
   width: 100%;
-  height: 750px; /* Altura que se ajusta com a largura da tela */
-  min-height: 250px; /* Garante que a altura nunca seja menor que 250px */
+  height: 750px; 
+  min-height: 250px; 
   position: relative;
   z-index: 2;
   padding-top: 150px;
-  overflow: hidden; /* Garante que nada das imagens absolutas vaze */
+  overflow: hidden; 
   margin-top: 100px;
 }
 
 .carrossel-container img {
   width: 100%;
-  height: 60vw;/* Use 100% para ocupar toda a altura do container */
-  object-fit: cover; /* Garante que a imagem preencha o container sem distorcer */
+  height: 60vw;
+  object-fit: cover; 
   position: absolute;
   top: 0;
   left: 0;
