--- a/src/app/pages/home/rodape/rodape.component.css
+++ b/src/app/pages/home/rodape/rodape.component.css
@@ -34,8 +34,9 @@
 }
 
 .redes span {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-family: 'Times New Roman', Times, serif;
+    padding-top: 20px;
 }
 
 .ban-rod {
@@ -49,11 +50,18 @@
 }
 
 .imglogo {
-    max-width: 50px;
-    gap: 40px
+    max-width: 40px;
+    gap: 40px;
+    padding-bottom: 40px;
+
+    gap: 30px;
+      align-items: center;
+    justify-content: space-between;
+    max-width: 40px;
+    padding-bottom: 40px;
+    
 
 }
-
 
 .container-rodape {
     padding-top: 40px;
@@ -72,16 +80,13 @@
     font-size: 22px;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-
 }
-
-
 
 .container-flex {
     display: flex;
     align-items: center;
-    justify-content: center; /* Centraliza horizontalmente */
-    gap: 0px; /* Adiciona espaço entre as imagens e o texto */
+    justify-content: center; 
+    gap: 0px;
 }
 
 .container-flex img {
