--- a/src/app/pages/ingressos/ingressos.component.html
+++ b/src/app/pages/ingressos/ingressos.component.html
@@ -1,3 +1,3 @@
 <app-cabecalhoing></app-cabecalhoing>
 <app-setores></app-setores>
-<app-rodape></app-rodape>
+<app-rodapedashboard></app-rodapedashboard>
