--- a/src/app/pages/rvenda/senna/senna.component.css
+++ b/src/app/pages/rvenda/senna/senna.component.css
@@ -70,7 +70,6 @@ h3 {
 .ingresso-row:last-child {
     border-bottom: none;
 }
-
 .ingresso-info {
     flex-grow: 1;
     display: flex;
@@ -82,7 +81,7 @@ h3 {
     color: #333;
 }
 .valor-tipo {
-    color: #e5004e; /* Cor primária do tema */
+    color: #e5004e; 
     font-weight: bold;
     font-size: 1.2em;
     margin-top: 4px;
@@ -126,7 +125,7 @@ h3 {
     font-size: 1.4em;
     font-weight: bold;
 }
-.resumo-total {
+.resumo-total { 
     font-size: 1.1em;
     padding: 12px 0;
     border-top: none;
@@ -183,11 +182,9 @@ h3 {
 }
 .opcao-box.selecionado {
     border-color: #e5004e;
-    background-color: #fff0f5;
+    background-color: #fff0f5; 
     font-weight: 600;
 }
-
-
 
 .form-cartao {
     margin-top: 20px;
@@ -225,17 +222,18 @@ h3 {
 }
 
 .localizacao-destaque {
-    background-color: black; 
-    color: white;           
+    background-color: black;
+    color: white;  
     padding: 10px 15px;
     border-radius: 6px;
-    margin-top: -10px;       
+    margin-top: -10px;   
     margin-bottom: 20px;
     font-size: 0.95em;
     font-weight: 500;
     text-align: center;
     border: 1px solid #b3e0ff;
 }
+
 
 .card-sucesso {
     padding: 30px;
