--- a/src/app/pages/venda/cabecalho-venda/cabecalho-venda.component.css
+++ b/src/app/pages/venda/cabecalho-venda/cabecalho-venda.component.css
@@ -1,23 +1,20 @@
-/* src/app/componentes/cabecalho/cabecalho.component.css */
-
 .banner {
     background-color:  #e1cbee;
-    height: 100px; /* Isso pode ser ajustado para 'auto' se o conteúdo empilhar */
+    height: 100px;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
     justify-content: space-between;
-    /* Adicione estas propriedades para o layout padrão (desktop) */
 
-    align-items: center; /* Alinha o conteúdo (o .ban) verticalmente */
+    align-items: center;
 }
 
 .ban {
     display: flex;
     align-items: center;
-    gap: 25px; /* Espaçamento entre a imagem e o bloco de texto */
+    gap: 25px;
     color: white;
     padding-left: 20%;
     width: 200px;
@@ -26,7 +23,6 @@
 }
 
 .banner img {
-    /* Remova o margin-left fixo para centralização no mobile */
     max-width: 100%;
     max-height: 50%;
 }
@@ -40,39 +36,25 @@
 .titulo-ingressos {
     text-align: end;
     position: absolute;
-    /* Adicione esta linha para mover o elemento para cima */
     top: 40px; 
-    /* Você também pode precisar ajustar a posição horizontal
-       usando 'right' já que está em 'position: absolute' */
-    right: 100px; /* Ajuste este valor conforme necessário */
+    right: 100px; 
 }
-
-
-
-/* ---------------------------------------------------- */
-/* MEDIA QUERY: Ajustes para Telas Pequenas (Mobile) */
-/* ---------------------------------------------------- */
 
 @media (max-width: 600px) {
     .banner {
-        /* Permite que o cabeçalho se expanda quando o conteúdo empilhar */
         height: auto; 
-        padding: 10px 0; /* Adiciona um padding vertical para respiro */
+        padding: 10px 0;
     }
 
     .ban {
-        /* Empilha o logo e o texto na vertical */
         flex-direction: column; 
-        
-        /* Centraliza tudo */
         align-items: center; 
         justify-content: center;
-        padding-left: 0; /* Remove o padding esquerdo em mobile */
+        padding-left: 0;
         gap: 5px;
     }
 
     .banner img {
-        /* Reduz o tamanho do logo em mobile, se necessário */
         width: 100px; 
         height: auto;
     }
